tests/neg/ref3.check
10 |   swap(a, a) // error
   |   ^^^^^^^^^^

     Separation error: {a} and {a} are not separated
